--- a/css/style.css
+++ b/css/style.css
@@ -225,3 +225,68 @@ h2 {
   opacity: .7;
 }
 -----------------------------------------------
+.container{
+  width:90%;
+  overflow: hidden;
+  margin:20px auto;
+  padding: 20px 0px;
+  
+
+}
+.container ul{
+  padding: 0px;
+  margin: 0px;
+
+}
+.container ul li{
+  list-style: none;
+  float: left;
+  width: 20%;
+  height: 309px;
+  background: red;
+  margin: 40px 20px 0px 40px;
+  box-sizing: border-box;
+  
+}
+.container ul li:hover{
+  opacity: 0.5;
+}
+.container ul li .footer{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background: white;
+  text-align: center;
+  color: #000;
+  margin-top: 259px;
+}
+@media screen and (max-width:1250px){
+  .container ul li{
+   width: 40%;
+   margin-left: 40px;   
+
+  }
+}
+.videos video{
+  height: 80%;
+  padding-top: 1%;
+  padding-left:2%;
+
+}
+.title{
+  margin-left:2%;
+  margin-top: 1%;
+}
+.likebtn-wrapper{
+  margin-left: 658px;
+  
+}
+.description p{
+  width:68%;
+  margin-top: 8px;
+  margin-left: 2%;
+  text-align:left;
+  padding: 10px;
+
+}
+
