--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ h2 {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  opacity: .7;
+  opacity: .9;
 }
 -----------------------------------------------
 .container{
@@ -281,12 +281,57 @@ h2 {
   margin-left: 658px;
   
 }
+
 .description p{
   width:68%;
-  margin-top: 8px;
+  margin-top: -50px;
   margin-left: 2%;
   text-align:left;
-  padding: 10px;
+  padding: 20px;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white; 
+  
+
+}
+/* /* ....................upnext */
+.upnext{
+  margin-left: 75%;
+  margin-top: -570px;
+  position: relative;
+  
+  
 
 }
 
+.upnext table td{
+ 
+  list-style: none;
+  width: 260px;
+  height: 200px;
+  background: red;
+  box-sizing: border-box;
+  
+
+  
+}
+.upnext table td:hover{
+  opacity: 0.5;
+  display: block;
+}
+
+.upnext ul li .footer{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background: white;
+  text-align: center;
+  color: #000;
+  margin-top: 259px;
+}
+.upnext_title{
+  margin-left: -10px;
+  margin-top: 11px;
+  font: bold;
+  margin-bottom: -5px;
+
+}
