--- a/css/style.css
+++ b/css/style.css
@@ -269,9 +269,14 @@ h2 {
 }
 .videos video{
   height: 80%;
-  padding-top: 1%;
-  padding-left:2%;
+  padding-top:3%;
+  margin-left: 15%;
+  margin-right: 20%;
 
+}
+.videos th{
+  border-bottom: 1pt solid white;
+  
 }
 .title{
   margin-left:2%;
@@ -290,48 +295,81 @@ h2 {
   padding: 20px;
   border-top: 1px solid white;
   border-bottom: 1px solid white; 
-  
-
+}  
+/* ............................................. */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
-/* /* ....................upnext */
-.upnext{
-  margin-left: 75%;
-  margin-top: -570px;
-  position: relative;
-  
-  
 
-}
-
-.upnext table td{
- 
-  list-style: none;
-  width: 260px;
-  height: 200px;
-  background: red;
-  box-sizing: border-box;
-  
-
-  
-}
-.upnext table td:hover{
-  opacity: 0.5;
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
   display: block;
+  transition: 0.3s;
 }
 
-.upnext ul li .footer{
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
-  background: white;
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+.vdo{
+  height: 500px;
+  padding-left: 240px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  
+}
+.desc{
+  padding-left: 232px;
+  color: #fff;
+}
+.name{
+  padding-left: 232px;
+  color: white;
+}
+.button {
+  border:1px solid white;
+  background: transparent;
+  padding: 15px 32px;
   text-align: center;
-  color: #000;
-  margin-top: 259px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 3px;
 }
-.upnext_title{
-  margin-left: -10px;
-  margin-top: 11px;
-  font: bold;
-  margin-bottom: -5px;
-
+.btn{
+  margin-left: 620px;
+  margin-top: -60px;
+}
+.button:hover{
+ background-color:green;
 }
